--- a/links.html
+++ b/links.html
@@ -5,10 +5,5 @@ title: "Links | "
 <h4>Links</h4>
 
 <p>
-  <strong>Australian Tango Championships</strong><br />
-  <a href="http://www.tangochampionship.com.au">www.tangochampionship.com.au</a><br />
-  <br />
-  <strong>Sydney Tango Salon Festival</strong><br />
-  <a href="http://www.stsfestival.com">www.stsfestival.com</a><br />
-  <br />
+  For all other tango group classes, milongas (social dances), etc in Sydney, please refer to Calendar on <a href="http://www.sydneytango.com.au/">www.sydneytango.com.au</a>
 </p>
