--- a/articles.html
+++ b/articles.html
@@ -22,7 +22,8 @@ title: "Articles | "
 </p>
 
 <p>
-  Argentine Tango is often close embrace, involves a definite lead and follow, constantly caresses the floor and is danced to music similar to classical music - combined with the unmistakeable and unique sound of a squeezebox called a "bandoneon".
+  Argentine Tango is often close embrace, involves a definite lead and follow, constantly caresses the floor and is danced to music similar to classical music - combined with the unmistakeable and unique sound of a squeezebox called a "
+  eon".
 </p>
 
 <p>
@@ -165,4 +166,8 @@ According to the first version, the "fuelle" was invented by Heinrich Band (also
   Borges says: "...Tango creates a blurred unreal past that somehow is true ".  The logic ruling our present time urges us to invent fables that project us beyond our tedious task inventories. This line by Borges casts light on the confusing illusory past revealed by the precise annals about the bandoneon, only to find us again in some dusty narrow streets  where the light melody , recreates that blurred unreal past that somehow is true.<br />
   <br />
   <hr />
+</p>
+
+<p>
+  &mdash; Written by Gabriela Ramazzotti in Buenos Aires
 </p>
