--- a/articles.html
+++ b/articles.html
@@ -70,11 +70,11 @@ title: "Articles | "
   But be warned: Tango is addictive!!
 </p>
 
-<p class="small">
-  By Sandy Grant, with contributions from Gabriela Ramazzotti in Buenos Aires<br />
-  <br />
-  <hr />
+<p>
+  &mdash Written by Sandy Grant, with contributions from Gabriela Ramazzotti in Buenos Aires
 </p>
+
+<hr />
 
 <h5><a name="TheBandoneon"></a>The Bandoneon: It's Blurred Unreal Past</h5>
 
@@ -163,11 +163,11 @@ According to the first version, the "fuelle" was invented by Heinrich Band (also
 </p>
 
 <p>
-  Borges says: "...Tango creates a blurred unreal past that somehow is true ".  The logic ruling our present time urges us to invent fables that project us beyond our tedious task inventories. This line by Borges casts light on the confusing illusory past revealed by the precise annals about the bandoneon, only to find us again in some dusty narrow streets  where the light melody , recreates that blurred unreal past that somehow is true.<br />
-  <br />
-  <hr />
+  Borges says: "...Tango creates a blurred unreal past that somehow is true ".  The logic ruling our present time urges us to invent fables that project us beyond our tedious task inventories. This line by Borges casts light on the confusing illusory past revealed by the precise annals about the bandoneon, only to find us again in some dusty narrow streets  where the light melody , recreates that blurred unreal past that somehow is true.
 </p>
 
 <p>
   &mdash; Written by Gabriela Ramazzotti in Buenos Aires
 </p>
+
+<hr />
