--- a/articles.html
+++ b/articles.html
@@ -71,7 +71,7 @@ title: "Articles | "
 </p>
 
 <p>
-  &mdash Written by Sandy Grant, with contributions from Gabriela Ramazzotti in Buenos Aires
+  &mdash; Written by Sandy Grant, with contributions from Gabriela Ramazzotti in Buenos Aires
 </p>
 
 <hr />
