--- a/classes.html
+++ b/classes.html
@@ -7,12 +7,7 @@ title: "Classes | "
 <p>
   <table class="pPadding">
     <tr>
-      <td colspan="3" style="font-weight: bold;">2 hour Beginner Workshop</td>
-    </tr>
-    <tr>
-      <td>Saturday, 5th March 2016</td>
-      <td>2pm-4pm</td>
-      <td>$35pp</td>
+      <td colspan="3" style="font-weight: bold;">Currently only doing private classes (at Annandale, 2038)</td>
     </tr>
     <tr>
       <td colspan="3">Please check news feed on home page for any temporary changes to classes.</td>
